--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -3,10 +3,6 @@ name: Go CI
 on:
   workflow_dispatch:
   push:
-env:
-  GOPRIVATE: "github.com/sourcegraph/*"
-  PRIVATE_TOKEN: "${{ secrets.PRIVATE_SG_ACCESS_TOKEN }}"
-
 jobs:
   go-test:
     strategy:
@@ -21,15 +17,9 @@ jobs:
         run: echo "go-version=$(grep 'golang' mise.toml | cut -d'"' -f2)" >> $GITHUB_OUTPUT
         shell: bash
       - name: Set up Go
-        uses: actions/setup-go@v6
+        uses: sourcegraph/actions/go-setup@main
         with:
           go-version: ${{ steps.mise.outputs.go-version }}
-      - name: (Windows) Enable pulling Go modules from private sourcegraph/sourcegraph
-        if: runner.os == 'Windows'
-        run: git config --global url."https://$env:PRIVATE_TOKEN@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
-      - name: (Default) Enable pulling Go modules from private sourcegraph/sourcegraph
-        if: runner.os != 'Windows'
-        run: git config --global url."https://${PRIVATE_TOKEN}@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
       - run: |
           go test -race -v ./...
           go test -v ./...
