--- a/.github/workflows/scip.yml
+++ b/.github/workflows/scip.yml
@@ -2,9 +2,6 @@ name: SCIP
 on:
   workflow_dispatch:
   push:
-env:
-  GOPRIVATE: "github.com/sourcegraph/*"
-  PRIVATE_TOKEN: "${{ secrets.PRIVATE_SG_ACCESS_TOKEN }}"
 jobs:
   scip-go:
     runs-on: ubuntu-latest
@@ -15,7 +12,7 @@ jobs:
         id: mise
         run: echo "go-version=$(grep 'golang' mise.toml | cut -d'"' -f2)" >> $GITHUB_OUTPUT
       - name: Set up Go
-        uses: actions/setup-go@v6
+        uses: sourcegraph/actions/go-setup@main
         with:
           go-version: ${{ steps.mise.outputs.go-version }}
 
@@ -24,9 +21,6 @@ jobs:
 
       - name: Build src-cli
         run: go build -o ./src-cli ./cmd/src
-
-      - name: Enable pulling Go modules from private sourcegraph/sourcegraph
-        run: git config --global url."https://${PRIVATE_TOKEN}@github.com/sourcegraph/".insteadOf "https://github.com/sourcegraph/"
 
       - name: Generate SCIP data
         run: scip-go
